--- a/v3/WebPrograming2_Final-Project/src/views/Film/admin/report.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Film/admin/report.ejs
@@ -3,5 +3,5 @@
     <input type="date" id="fromDate" name="fromDate">
     <label for="toDate">toDate:</label>
     <input type="date" id="toDate" name="toDate" >
-    <input type="submit" value="Check">
+    <input type="submit" class="btn btn-success mr-2" value="Check">
   </form>
