--- a/v3/WebPrograming2_Final-Project/src/views/ShowTime/admin/add-showtime.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/ShowTime/admin/add-showtime.ejs
@@ -42,7 +42,7 @@
       <div class="col-lg-5 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
-                <h4 style="margin-top: 40px;" class="card-title">Điền thông tin phim</h4>
+                <h4 style="margin-top: 40px;" class="card-title">Điền thông tin suất chiếu</h4>
                 <form class="forms-sample" method="POST">
                     <div class="form-group">
                       <label for="start_time">Start Time</label><br />
