--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/cinema.ejs
@@ -45,7 +45,17 @@
         </div>
     </div>
 </div>
+<script>
 
+    // Get data-id field by using $(this).data("id");
+  
+    $(function() {
+        $("#add-btn").click(function() {
+            window.location.href = `/admin/manage-cinema/add-cinema`;
+        });
+    });
+  
+  </script>
 
 
 
