--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/update-cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/update-cinema.ejs
@@ -1,55 +1,82 @@
-
-  <div class="content-wrapper">
-    <div class="row">
-
-      <div class="col-lg-5 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Điền thông tin Rạp</h4>
-                <form class="forms-sample" method="POST">
-                  <div class="form-group">
-                    <div class="form-group">
-                      <label>Name</label>
-                      <input type="text" class="form-control" value="<%= cinema.displayName %>" name="cinema_name" required />
-                    </div>
-                  <div class="form-group">
-                    <label for="cinema_hsize">Horizontal</label><br />
-                    <input type="text" name="cinema_hsize" value="<%= cinema.horizontalSize %>" class="form-control" /><br />
-                  </div>
-                  <div class="form-group">
-                    <label for="cinema_vsize">Verticle</label><br />
-                    <input type="text" name="cinema_vsize" value="<%= cinema.verticleSize %>" class="form-control" /><br />
-                  </div>
-
-                  <div class="form-group">
-                    <label for="cinema_type">Type</label><br />
-                    <select name="cinema_type">
-                      <option value="<%= cinema.type_id %>" selected>Choose another...</option>
-                      <option value="1">2D</option>
-                      <option value="2">3D</option>
-                      <option value="3">4DX</option>
-                    </select>
-                  </div>
-
-                  <label for="cinema_owner_cluster">Belong to</label>
-                  <div class="form-group">
-                    <label for="cinema_owner_cluster">Film</label>
-                    <br />
-                    <select name="cinema_owner_cluster">
-                      <% clusters.forEach(cluster => { %>
-                      <% if(cinema.ownerCluster_id === cluster.uuid) { %>
-                      <option value="<%=cluster.uuid%>" selected><%=cluster.displayName%></option>
-                      <%} else { %>
-                      <option value="<%=cluster.uuid%>"><%=cluster.displayName%></option>
-                      <% }}); %>
-                    </select>
-                    <br />
-                  </div>
-                    <input type="submit" value="Update" class="btn btn-success mr-2"/>
-                  </form>
+<div class="content-wrapper">
+  <div class="row">
+    <div class="col-lg-7 grid-margin stretch-card">
+      <div class="card">
+        <div class="card-body" >
+          <label for="avatar">Avatar:</label><br/>
+          <img
+            src="/cinema/avatar/<%- cinema.uuid %>"
+            style="width: 70%; height: 85%; margin-left: 70px; margin-bottom: 20px;"/>
+          
+        </div>
+        
+        <div class="card-body align-items-center d-flex justify-content-center">
+            <div class="pagination">
+                
             </div>
         </div>
       </div>
     </div>
+    <div class="col-lg-5 grid-margin stretch-card">
+      <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Điền thông tin Rạp</h4>
+            <form class="forms-sample" method="POST" enctype="multipart/form-data">
+              <div class="form-group">
+                <label for="film_uuid">UUID:</label><br />
+                <input
+                  type="text"
+                  style="background-color: rgb(168, 166, 166)"
+                  value="<%= cinema.uuid %>"
+                  name="film_uuid" class="form-control"
+                  readonly/>
+              </div>
+              <div class="form-group">
+                <label>Avatar</label>
+                <input class="form-control" accept="image/*" type="file" name="avatar" id="avatar" required />
+            </div>
+              <div class="form-group">
+                <div class="form-group">
+                  <label>Name</label>
+                  <input type="text" class="form-control" value="<%= cinema.displayName %>" name="cinema_name" required />
+                </div>
+              <div class="form-group">
+                <label for="cinema_hsize">Horizontal</label><br />
+                <input type="text" name="cinema_hsize" value="<%= cinema.horizontalSize %>" class="form-control" /><br />
+              </div>
+              <div class="form-group">
+                <label for="cinema_vsize">Verticle</label><br />
+                <input type="text" name="cinema_vsize" value="<%= cinema.verticleSize %>" class="form-control" /><br />
+              </div>
+
+              <div class="form-group">
+                <label for="cinema_type">Type</label><br />
+                <select name="cinema_type">
+                  <option value="<%= cinema.type_id %>" selected>Choose another...</option>
+                  <option value="1">2D</option>
+                  <option value="2">3D</option>
+                  <option value="3">4DX</option>
+                </select>
+              </div>
+
+              
+              <div class="form-group">
+                <label for="cinema_owner_cluster">Belong to</label>
+                <br>
+                <select name="cinema_owner_cluster">
+                  <% clusters.forEach(cluster => { %>
+                  <% if(cinema.ownerCluster_id === cluster.uuid) { %>
+                  <option value="<%=cluster.uuid%>" selected><%=cluster.displayName%></option>
+                  <%} else { %>
+                  <option value="<%=cluster.uuid%>"><%=cluster.displayName%></option>
+                  <% }}); %>
+                </select>
+                <br />
+              </div>
+                <input type="submit" value="Update" class="btn btn-success mr-2"/>
+              </form>
+        </div>
+      </div>
+    </div>
   </div>
-  
+</div>
