--- a/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/add-cinema.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Cinema/admin/add-cinema.ejs
@@ -40,16 +40,12 @@
         <div class="card">
             <div class="card-body">
                 <h4 style="margin-top: 40px;" class="card-title">Điền thông tin Rạp</h4>
-                <form class="forms-sample" method="POST" enctype="multipart/form-data">
+                <form class="forms-sample" method="POST">
                     <div class="form-group">
                       <div class="form-group">
                         <label>Name</label>
                         <input type="text" class="form-control" name="cinema_name" required />
                       </div>
-                      <div class="form-group">
-                        <label>Avatar</label>
-                        <input class="form-control" accept="image/*" type="file" name="avatar" id="avatar" required />
-                    </div>
                     <div class="form-group">
                       <label for="cinema_hsize">Horizontal</label><br />
                       <input type="text" name="cinema_hsize" class="form-control" /><br />
@@ -70,11 +66,11 @@
                       <br />
                     </div>
 
-                    <label for="cinema_owner_cluster">Belong to</label>
+                    
                     <div class="form-group">
-                      <label for="cinema_owner_cluster">Film</label>
+                      <label for="cinema_owner_cluster">Belong to</label>
                       <br />
-                      <select name="cinema_owner_cluster">
+                      <select name="cinema_owner_cluster" class="form-control">
                         <% clusters.forEach(cluster => { %>
                         <option value="<%=cluster.uuid%>"><%=cluster.displayName%></option>
                         <%}); %>
