--- a/v3/WebPrograming2_Final-Project/src/views/CinemaCluster/admin/add-cluster.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/CinemaCluster/admin/add-cluster.ejs
@@ -1,14 +1,59 @@
-<form method="POST">
 
-    <!-- Display Name -->
-    <label for="cluster_name">Display Name:</label><br>
-    <input type="text" name="cluster_name" required><br>
-
-    <!-- Address -->
-    <label for="cluster_address">Address</label><br>
-    <input type="text" name="cluster_address" required><br>       
-
-
-    <input type="submit" value="Add">
-
-</form>
+<div class="content-wrapper">
+    <div class="row">
+        <div class="col-lg-7 grid-margin stretch-card">
+            <div class="card">
+                <div class="card-body">
+                    <button style="margin-bottom: 20px; font-size: large;" class="btn btn-success mr-2" id="add-btn"> <u>Add a cinema cluster now</u></button><br>
+                    <h4 class="card-title">List of cinema cluster</h4>
+                    <table class="table table-hover" id="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Address</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            
+                            <% cinema_clusters.forEach(element => { %>
+                                <tr>
+                                    <td><%= element.displayName %></td>
+                                    <td>
+                                        <%= element.address %>
+                                    </td>
+                                </tr>
+                            <% }) %>
+                    </table>
+                </div>
+                
+                <div class="card-body align-items-center d-flex justify-content-center">
+                    <div class="pagination">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-5 grid-margin stretch-card">
+          <div class="card">
+              <div class="card-body">
+                  <h4 style="margin-top: 40px;" class="card-title">Điền thông tin cụm rạp</h4>
+                  <form class="forms-sample" method="POST" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label>Avatar</label>
+                        <input class="form-control" accept="image/*" type="file" name="cluster_avatar" required />
+                    </div>
+                      <div class="form-group">
+                        <label for="cluster_address">Address</label>
+                        <input type="text" class="form-control" name="cluster_address" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="cluster_name">Display Name:</label>
+                        <input type="text" name="cluster_name" class="form-control" required>
+                      </div>
+                      <input type="submit" class="btn btn-success mr-2" value="Add"/>
+                    </form>
+              </div>
+          </div>
+        </div>
+    </div>
+  </div>
