--- a/v3/WebPrograming2_Final-Project/src/views/CinemaCluster/admin/update-cluster.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/CinemaCluster/admin/update-cluster.ejs
@@ -1,14 +1,45 @@
-<form method="POST">
-
-    <!-- Display Name -->
-    <label for="cluster_name">Display Name:</label><br>
-    <input type="text" value="<%= cinema_cluster.displayName %>" name="cluster_name" required><br>
-
-    <!-- Address -->
-    <label for="cluster_address">Address</label><br>
-    <input type="text" value="<%= cinema_cluster.address %>" name="cluster_address" required><br>       
 
 
-    <input type="submit" value="Update">
-
-</form>
+<div class="content-wrapper">
+    <div class="row">
+      <div class="col-lg-7 grid-margin stretch-card">
+        <div class="card">
+          <div class="card-body" >
+            <label for="film_poster">Poster:</label><br/>
+            <img
+              src="/film/avatarCinemaClus/<%- cinema_cluster.uuid %>"
+              style="width: 70%; height: 85%; margin-left: 70px; margin-bottom: 20px;"/>
+            
+          </div>
+          
+          <div class="card-body align-items-center d-flex justify-content-center">
+              <div class="pagination">
+                  
+              </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-5 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Điền thông cụm rạp</h4>
+                <form class="forms-sample" method="POST" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label>Avatar</label>
+                        <input class="form-control" accept="image/*" type="file" name="cluster_avatar" />
+                    </div>
+                    <div class="form-group">
+                        <label for="cluster_name">Display Name:</label>
+                        <input type="text" value="<%= cinema_cluster.displayName %>" class="form-control" name="cluster_name" required/>
+                    </div>
+                    <div class="form-group">
+                        <label for="cluster_address">Address</label><br>
+                        <input type="text" value="<%= cinema_cluster.address %>" class="form-control" name="cluster_address" required/>  
+                    </div>
+                    <input type="submit" value="Update" class="btn btn-success mr-2"/>
+                  </form>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
