Sua lich su dat ve

--- a/v3/WebPrograming2_Final-Project/src/views/Booking/booking-history.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/Booking/booking-history.ejs
@@ -23,7 +23,7 @@
                                 >
                             </h3>
                             <p>Ngày đặt:  <%= booking.bookDate.toLocaleDateString('pt-br'); %> - <%= booking.bookDate.toLocaleTimeString() %></p> 
-                            <p>Rạp: <%= booking.cinema_name %></p>
+                            <p>Rạp: <%= booking.cinema_name %> - <%= booking.clusterName %> </p>
                             <p>Ghế: <%= booking.chair %></p>
                         </div>
                     </div>
