Sua nhap lai mat khau

--- a/v3/WebPrograming2_Final-Project/src/views/User/auth/forgot-password/enter-new-password.ejs
+++ b/v3/WebPrograming2_Final-Project/src/views/User/auth/forgot-password/enter-new-password.ejs
@@ -2,7 +2,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            
+            <div class="hero-ct">
+              <h1 style="margin-left: 12px;">NHẬP MẬT KHẨU MỚI</h1>
+            </div>
           </div>
         </div>
       </div>
@@ -13,25 +15,25 @@
             <div class="form-style-1 user-pro" action="">
               <form action="/forgot-password/enter-new-password" method="POST" class="password">
                 <div class="row">
-                    <div class="col-md-6 form-it">
+                    <div class="col-md-12 form-it">
                       <label for="new_password">Email</label>
                       <input style="background-color: gray; color: white;" type="text" name="_email" value="<%- qEmail %>" readonly />
                     </div>
                   </div>
                 <div class="row">
-                  <div class="col-md-6 form-it">
-                    <label for="new_password">New Password</label>
-                    <input type="password" name="new_password" placeholder="***************" />
+                  <div class="col-md-12 form-it">
+                    <label for="new_password">Password mới</label>
+                    <input type="password" name="new_password" minlength="8" pattern="[A-Za-z0-9]+"/>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-6 form-it">
-                    <label for="new_password_re_enter">Confirm New Password</label>
-                    <input type="password" name="new_password_re_enter" placeholder="*************** " />
+                  <div class="col-md-12 form-it">
+                    <label for="new_password_re_enter">Nhập lại password</label>
+                    <input type="password" name="new_password_re_enter" minlength="8" pattern="[A-Za-z0-9]+"/>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-md-2">
+                  <div class="col-md-12">
                     <input class="submit" type="submit" value="change" />
                   </div>
                 </div>
